Fix overflow on explanation

--- a/styles/main.css
+++ b/styles/main.css
@@ -126,6 +126,7 @@ a:hover {
 .explanation {
     width: 50%;
     max-height: 75vh;
+    overflow: initial;
 }
 
 .examples {
